--- a/experiments/webots_test/controllers/kobuki/Makefile
+++ b/experiments/webots_test/controllers/kobuki/Makefile
@@ -17,9 +17,11 @@
 # You may add some variable definitions hereafter to customize the build process
 # See documentation in $(WEBOTS_HOME_PATH)/resources/Makefile.include
 
+CXX_SOURCES = devices.cpp kobuki.cpp
 
 # Do not modify the following: this includes Webots global Makefile.include
 null :=
 space := $(null) $(null)
 WEBOTS_HOME_PATH=$(subst $(space),\ ,$(strip $(subst \,/,$(WEBOTS_HOME))))
 include $(WEBOTS_HOME_PATH)/resources/Makefile.include
+
