--- a/ego_robot/CMakeLists.txt
+++ b/ego_robot/CMakeLists.txt
@@ -26,6 +26,8 @@ macro(kobuki_core_add_demo name)
   helper.cpp
   monitor.hpp
   monitor.cpp
+  socket.hpp
+  socket.cpp
   /home/ubuntu/P-RTA/P/Bld/Drops/Prt/include/ext_compat.h
   /home/ubuntu/P-RTA/P/Bld/Drops/Prt/include/libhandler.h
   /home/ubuntu/P-RTA/P/Bld/Drops/Prt/include/libhandler-internal.h
